--- a/index.html
+++ b/index.html
@@ -8,19 +8,114 @@
     <!-- daisy ui and tailwind cdn -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.10.1/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- font awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- manrope font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <style>
-        .font-manrope{
+        .font-manrope {
             font-family: "Manrope", sans-serif;
         }
     </style>
 </head>
 
 <body class="font-manrope">
+    <header class="container mx-auto my-24">
+        <div class="hero">
+            <div class="hero-content flex-col lg:flex-row">
+                <div>
+                    <h1 class="text-7xl font-extrabold">
+                        It's good <br>
+                        tea time at The
+                        <br>
+                        Tea House
+                    </h1>
+                    <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
+                    </p>
+                    <button
+                        class=" btn bg-gradient-to-r from-[#FF8938] to-[#FF0000] text-white text-xl font-bold ">Explore
+                        More</button>
 
+                </div>
+                <div>
+                    <img src="images/banner.png" class="max-w-sm" />
+                    <div class=" -mt-24 flex items-center gap-4 p-2 drop-shadow-lg bg-white w-60 rounded-lg">
+                        <i class="fa-solid fa-star text-amber-500 text-3xl"></i>
+                        <div>
+                            <h3 class="text-3xl font-extrabold">5.00</h3>
+                            <p class="">Trust Pilot Ratings</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main class="container mx-auto my-24">
+        <section class="text-center">
+            <!-- feature section -->
+            <h3 class="text-5xl font-extrabold mb-5">Our Featured Products</h3>
+            <p class="max-w-3xl mx-auto mb-10">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration in some form, by injected humour, or randomised words which don't look
+                even slightly believable. </p>
+            <div class="grid grid-cols-1 lg:grid-cols-4 gap-8 p-6">
+                <!-- first card -->
+                <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl p-8">
+                    <figure><img src="images/tea-1.png"
+                            alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="text-2xl font-extrabold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+            </div>
+                <!-- 2nd card -->
+                <div class="card   bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl p-8">
+                    <figure><img src="images/tea-2.png"
+                            alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="text-2xl font-extrabold">Black Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+            </div>
+                <!-- 3rd card -->
+                <div class="card  bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl p-8">
+                    <figure><img src="images/tea-3.png"
+                            alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="text-2xl font-extrabold">Lemon Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+            </div>
+                <!-- 4th card -->
+                <div class="card  bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl p-8">
+                    <figure><img src="images/tea-4.png"
+                            alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="text-2xl font-extrabold">Green Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+            </div>
+            </div>
+        </section>
+        <!-- great tea section -->
+        <section>
+
+        </section>
+        <!-- super client section -->
+        <section>
+
+        </section>
+        <!-- news and event section -->
+        <section class="my-24">
+
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
