--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         It's good <br>
                         tea time at The
                         <br>
-                        Tea House
+                        <span class="text-amber-900">Tea House</span>
                     </h1>
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                     </p>
@@ -58,58 +58,102 @@
         <section class="text-center">
             <!-- feature section -->
             <h3 class="text-5xl font-extrabold mb-5">Our Featured Products</h3>
-            <p class="max-w-3xl mx-auto mb-10">There are many variations of passages of Lorem Ipsum available, but the
+            <p class="max-w-3xl mx-auto mb-10 opacity-80">There are many variations of passages of Lorem Ipsum
+                available, but the
                 majority have suffered alteration in some form, by injected humour, or randomised words which don't look
                 even slightly believable. </p>
             <div class="grid grid-cols-1 lg:grid-cols-4 gap-8 p-6">
                 <!-- first card -->
-                <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl p-8">
-                    <figure><img src="images/tea-1.png"
-                            alt="Shoes" /></figure>
+                <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4]  p-8">
+                    <figure><img src="images/tea-1.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="text-2xl font-extrabold">Milk Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
                     </div>
-            </div>
+                </div>
                 <!-- 2nd card -->
-                <div class="card   bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl p-8">
-                    <figure><img src="images/tea-2.png"
-                            alt="Shoes" /></figure>
+                <div class="card   bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4]  p-8">
+                    <figure><img src="images/tea-2.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="text-2xl font-extrabold">Black Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
                     </div>
-            </div>
+                </div>
                 <!-- 3rd card -->
-                <div class="card  bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl p-8">
-                    <figure><img src="images/tea-3.png"
-                            alt="Shoes" /></figure>
+                <div class="card  bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4]  p-8">
+                    <figure><img src="images/tea-3.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="text-2xl font-extrabold">Lemon Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
                     </div>
-            </div>
+                </div>
                 <!-- 4th card -->
-                <div class="card  bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl p-8">
-                    <figure><img src="images/tea-4.png"
-                            alt="Shoes" /></figure>
+                <div class="card  bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4]  p-8">
+                    <figure><img src="images/tea-4.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="text-2xl font-extrabold">Green Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
                     </div>
-            </div>
+                </div>
             </div>
         </section>
         <!-- great tea section -->
-        <section>
+        <section class="my-24 flex flex-col p-5 lg:flex-row gap-12">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 flex-1">
+                <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100">
 
+                </div>
+                <div class="rounded-xl row-span-2  flex justify-center items-center px-8 py-12 bg-[#e6a6231a]">
+                    <img src="images/fresh-1.png" alt="">
+                </div>
+                <div class="rounded-xl row-span-2  flex justify-center items-center  px-8 py-12 bg-[#5776391a]">
+                    <img src="images/fresh-2.png" alt="">
+                </div>
+                <div class="rounded-xl h-36 bg-gradient-to-r from-[#d9d9d9] to-[#fff]">
+
+                </div>
+            </div>
+            <div class="space-y-5 flex-1">
+                <h3 class="text-4xl font-extrabold">Great Tea, Freshly
+                    <br> Presented
+                </h3>
+                <p class="font-medium opacity-70">The meaning of gong cha is chanese is to provide the best tea to
+                    emperor from all possessions . It
+                    represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply
+                    appreciated by its custoers because of good words of mouth and unique customized service orginated
+                    from Taiwan.</p>
+                <h4 class="text-xl font-extrabold mt-8">Unique Taste</h4>
+                <p class="font-medium opacity-70">A Unique and different style from other teapots <br> gives a luxurious and
+                    minimalist impression</p>
+                <h4 class="text-xl font-extrabold mt-8">Premium Quality</h4>
+                <p class="font-medium opacity-70">A Unique and different style from other teapots <br> gives a luxurious and
+                    minimalist impression</p>
+            </div>
         </section>
         <!-- super client section -->
         <section>
 
         </section>
         <!-- news and event section -->
-        <section class="my-24">
+        <section class="my-24 text-center">
+            <h3 class="text-5xl font-extrabold mb-4">News & Events</h3>
+            <p class="max-w-3xl mx-auto mb-10 opacity-80">There are many variations of passages of Lorem Ipsum
+                available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                words which don't look even slightly believable. </p>
+            <div>
+                <!-- first card -->
+                <div class=" w-96 bg-base-100 ">
+                    <figure><img src="images/news-1.png" alt="Shoes" /></figure>
+                    <div class="justify-start">
+                        <small>Feb 05, 2027</small>
+                        <h2 class="">Collecting 8 points for discount</h2>
+                        <p>There are many variations of passages of Lorem Ipsum available.</p>
+                        <div class="">
+                            <button class="btn btn-primary">Learn More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </section>
     </main>
