--- a/index.html
+++ b/index.html
@@ -123,36 +123,105 @@
                     appreciated by its custoers because of good words of mouth and unique customized service orginated
                     from Taiwan.</p>
                 <h4 class="text-xl font-extrabold mt-8">Unique Taste</h4>
-                <p class="font-medium opacity-70">A Unique and different style from other teapots <br> gives a luxurious and
+                <p class="font-medium opacity-70">A Unique and different style from other teapots <br> gives a luxurious
+                    and
                     minimalist impression</p>
                 <h4 class="text-xl font-extrabold mt-8">Premium Quality</h4>
-                <p class="font-medium opacity-70">A Unique and different style from other teapots <br> gives a luxurious and
+                <p class="font-medium opacity-70">A Unique and different style from other teapots <br> gives a luxurious
+                    and
                     minimalist impression</p>
             </div>
         </section>
         <!-- super client section -->
-        <section>
-
+        <section
+            class="my-24  flex flex-col lg:flex-row bg-gradient-to-r from-[#FF8938] to-[#FF0000] px-16 py-24 gap-12 rounded-xl m-5">
+            <div class="flex items-center lg:pr-28 ">
+                <div class="space-y-5">
+                    <h3 class="text-5xl font-extrabold text-white">
+                        Meet Our Super
+                        <br>
+                        Clients
+                    </h3>
+                    <p class="font-medium text-[#F4F4F4]">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even slightly
+                        believable.
+                    </p>
+                    <button class="btn bg-white">Show All</button>
+                </div>
+            </div>
+            <!-- review container -->
+            <div class="relative">
+                <!--next review -->
+                <div class="relative bg-white p-10 rounded-xl mb-16 opacity-40 z-10">
+                    <img class="absolute -top-5 -left-5 border-4 border-white bg-white rounded-full"
+                        src="images/client.png" alt="">
+                    <p class="text-gray-400">We are providing the best and suitable home insurance services for the
+                        people who are interested to treatment</p>
+                    <h4 class="font-bold text-[#1C1C1C] mt-5">Ilham Yuda</h4>
+                    <p class="text-[#5D5A6F]">Businessman</p>
+                </div>
+                <!--current review -->
+                <div class="absolute lg:-left-24 lg:w-[470px] top-40  bg-white p-10 rounded-xl z-20">
+                    <img class="absolute -top-5 -left-5 border-4 border-white bg-white rounded-full"
+                        src="images/client.png" alt="">
+                    <p class="text-gray-400">We are providing the best and suitable home insurance services for the
+                        people who are interested to treatment</p>
+                    <h4 class="font-bold text-[#1C1C1C] mt-5">Ilham Yuda</h4>
+                    <p class="text-[#5D5A6F]">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+                <!--previous review -->
+                <div class="relative bg-white p-10 rounded-xl opacity-40 z-10">
+                    <img class="absolute -top-5 -left-5 border-4 border-white bg-white rounded-full"
+                        src="images/client.png" alt="">
+                    <p class="text-gray-400">We are providing the best and suitable home insurance services for the
+                        people who are interested to treatment</p>
+                    <h4 class="font-bold text-[#1C1C1C] mt-5">Ilham Yuda</h4>
+                    <p class="text-[#5D5A6F]">Businessman</p>
+                </div>
+            </div>
         </section>
         <!-- news and event section -->
-        <section class="my-24 text-center">
-            <h3 class="text-5xl font-extrabold mb-4">News & Events</h3>
+        <section class="my-24">
+            <div class="text-center">
+                <h3 class="text-5xl font-extrabold mb-4">News & Events</h3>
             <p class="max-w-3xl mx-auto mb-10 opacity-80">There are many variations of passages of Lorem Ipsum
                 available, but the majority have suffered alteration in some form, by injected humour, or randomised
                 words which don't look even slightly believable. </p>
-            <div>
+            </div>
+                <!-- events container -->
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-4 ml-10">
                 <!-- first card -->
-                <div class=" w-96 bg-base-100 ">
-                    <figure><img src="images/news-1.png" alt="Shoes" /></figure>
-                    <div class="justify-start">
-                        <small>Feb 05, 2027</small>
-                        <h2 class="">Collecting 8 points for discount</h2>
-                        <p>There are many variations of passages of Lorem Ipsum available.</p>
-                        <div class="">
-                            <button class="btn btn-primary">Learn More</button>
-                        </div>
-                    </div>
+                <div class="space-y-3 border-2 border-gray-300 rounded-xl p-5 w-[364px]">
+                    <img class="mb-3" src="images/news-1.png" alt="">
+                    <small class="text-gray-400 ">Feb 05, 2027</small>
+                    <h4 class="text-xl font-extrabold ">Collecting 8 points for discount</h4>
+                    <p>There are many variations of passages 
+                        <br> of Lorem Ipsum available.</p>
+                        <h4 class="font-bold">Learn More...</h4>
+                    </div>              
+                <!-- second card -->
+                <div class="space-y-3 border-2 border-gray-300 rounded-xl p-5 w-[364px]">
+                    <img class="mb-3" src="images/news-2.png" alt="">
+                    <small class="text-gray-400 ">Feb 05, 2027</small>
+                    <h4 class="text-xl font-extrabold ">Collecting 8 points for discount</h4>
+                    <p>There are many variations of passages 
+                        <br> of Lorem Ipsum available.</p>
+                        <h4 class="font-bold">Learn More...</h4>
+                </div>              
+                <!-- third card -->
+                <div class="space-y-3 border-2 border-gray-300 rounded-xl p-5 w-[364px]">
+                    <img class="mb-3" src="images/news-3.png" alt="">
+                    <small class="text-gray-400 ">Feb 05, 2027</small>
+                    <h4 class="text-xl font-extrabold ">Collecting 8 points for discount</h4>
+                    <p>There are many variations of passages 
+                        <br> of Lorem Ipsum available.</p>
+                        <h4 class="font-bold">Learn More...</h4>
                 </div>
+               
             </div>
 
         </section>
