--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 </head>
 
 <body class="font-manrope">
-    <header class="container mx-auto my-24">
-        <div class="hero">
-            <div class="hero-content flex-col lg:flex-row">
+    <header class="container mx-auto ">
+        <div class="my-20 mx-9">
+            <div class="flex justify-between 
+           items-center flex-col lg:flex-row">
                 <div>
                     <h1 class="text-7xl font-extrabold">
                         It's good <br>
@@ -38,11 +39,11 @@
                     </p>
                     <button
                         class=" btn bg-gradient-to-r from-[#FF8938] to-[#FF0000] text-white text-xl font-bold ">Explore
-                        More</button>
+                        More <i class="fa-solid fa-arrow-trend-up"></i></button>
 
                 </div>
                 <div>
-                    <img src="images/banner.png" class="max-w-sm" />
+                    <img src="images/banner.png" class="" />
                     <div class=" -mt-24 flex items-center gap-4 p-2 drop-shadow-lg bg-white w-60 rounded-lg">
                         <i class="fa-solid fa-star text-amber-500 text-3xl"></i>
                         <div>
@@ -188,47 +189,94 @@
         <section class="my-24">
             <div class="text-center">
                 <h3 class="text-5xl font-extrabold mb-4">News & Events</h3>
-            <p class="max-w-3xl mx-auto mb-10 opacity-80">There are many variations of passages of Lorem Ipsum
-                available, but the majority have suffered alteration in some form, by injected humour, or randomised
-                words which don't look even slightly believable. </p>
+                <p class="max-w-3xl mx-auto mb-10 opacity-80">There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                    words which don't look even slightly believable. </p>
             </div>
-                <!-- events container -->
+            <!-- events container -->
             <div class="grid grid-cols-1 lg:grid-cols-3 gap-4 ml-10">
                 <!-- first card -->
                 <div class="space-y-3 border-2 border-gray-300 rounded-xl p-5 w-[364px]">
                     <img class="mb-3" src="images/news-1.png" alt="">
                     <small class="text-gray-400 ">Feb 05, 2027</small>
                     <h4 class="text-xl font-extrabold ">Collecting 8 points for discount</h4>
-                    <p>There are many variations of passages 
-                        <br> of Lorem Ipsum available.</p>
-                        <h4 class="font-bold">Learn More...</h4>
-                    </div>              
+                    <p>There are many variations of passages
+                        <br> of Lorem Ipsum available.
+                    </p>
+                    <h4 class="font-bold">Learn More...</h4>
+                </div>
                 <!-- second card -->
                 <div class="space-y-3 border-2 border-gray-300 rounded-xl p-5 w-[364px]">
                     <img class="mb-3" src="images/news-2.png" alt="">
                     <small class="text-gray-400 ">Feb 05, 2027</small>
                     <h4 class="text-xl font-extrabold ">Collecting 8 points for discount</h4>
-                    <p>There are many variations of passages 
-                        <br> of Lorem Ipsum available.</p>
-                        <h4 class="font-bold">Learn More...</h4>
-                </div>              
+                    <p>There are many variations of passages
+                        <br> of Lorem Ipsum available.
+                    </p>
+                    <h4 class="font-bold">Learn More...</h4>
+                </div>
                 <!-- third card -->
                 <div class="space-y-3 border-2 border-gray-300 rounded-xl p-5 w-[364px]">
                     <img class="mb-3" src="images/news-3.png" alt="">
                     <small class="text-gray-400 ">Feb 05, 2027</small>
                     <h4 class="text-xl font-extrabold ">Collecting 8 points for discount</h4>
-                    <p>There are many variations of passages 
-                        <br> of Lorem Ipsum available.</p>
-                        <h4 class="font-bold">Learn More...</h4>
+                    <p>There are many variations of passages
+                        <br> of Lorem Ipsum available.
+                    </p>
+                    <h4 class="font-bold">Learn More...</h4>
                 </div>
-               
+
             </div>
 
         </section>
     </main>
-    <footer>
-
+    <footer class="px-4 lg:px-40 py-10 bg-base-200 text-base-content">
+        <div class="flex justify-between mb-4">
+            <img src="images/cup.png" alt="">
+            <p>
+                <span>Ready to get started?</span>
+                <button class="btn bg-gradient-to-r from-[#FF8938] to-[#FF0000] text-white text-xl font-bold">Get Started</button>
+            </p>
+        </div>
+     <div class="footer">
+        <nav>
+            <h6 class="footer-title">Services</h6>
+            <a class="link link-hover">Branding</a>
+            <a class="link link-hover">Design</a>
+            <a class="link link-hover">Marketing</a>
+            <a class="link link-hover">Advertisement</a>
+        </nav>
+        <nav>
+            <h6 class="footer-title">Company</h6>
+            <a class="link link-hover">About us</a>
+            <a class="link link-hover">Contact</a>
+            <a class="link link-hover">Jobs</a>
+            <a class="link link-hover">Press kit</a>
+        </nav>
+        <nav>
+            <h6 class="footer-title">Legal</h6>
+            <a class="link link-hover">Terms of use</a>
+            <a class="link link-hover">Privacy policy</a>
+            <a class="link link-hover">Cookie policy</a>
+        </nav>
+        <form>
+            <h6 class="footer-title">Newsletter</h6>
+            <fieldset class="form-control w-80">
+                <label class="label">
+                    <span class="label-text">Enter your email address</span>
+                </label>
+                <div class="">
+                    <input type="text" placeholder="username@site.com" class="bg-transparent border-b-2 border-black py-4" />
+                    <button class="btn   bg-gradient-to-r from-[#FF8938] to-[#FF0000] rounded-full text-white"><i class="fa-solid fa-chevron-right"></i></button>
+                </div>
+            </fieldset>
+        </form>
+     </div>
+        <div class="text-center my-10">
+            <p>Copyright © 2024 - All right reserved by ACME Industries Ltd</p>
+        </div>
     </footer>
+
 </body>
 
 </html>
